<?xml version="1.0"?>
<package>
  <name>kuon</name>
  <version>1.0.0</version>
  <description>The Kuon Rugged Mobile Robotic Platform ROS metapackage - provides complete kuon software bundle.</description>
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>

  <license>BSD</license>

  <url type="website">http://roadnarrows.com/r-and-d/Kuon</url>
  <url type="website">http://github.com/roadnarrows-robotics/kuon</url>

  <author email="robin.knight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>kuon_control</run_depend>
  <run_depend>kuon_desc</run_depend>
  <run_depend>kuon_launch</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
