<?xml version="1.0"?>
<package>
  <name>kuon_rosbridge</name>
  <version>0.0.0</version>
  <description>The kuon_rosbridge package</description>

  <maintainer email="daniel@roadnarrows.com">Daniel Packard</maintainer>
  <author email="daniel@roadnarrows.com">Daniel Packard</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
